<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/login_background">"
	    
	<TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_marginBottom="20dp">
		<TableRow>
		    <TextView
		        android:id="@+id/usernameTextView"
		        android:layout_column="0"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/username"
		        android:fontFamily="@string/textStyle"
		        android:textColor="@color/white"
		        android:textSize="20sp"
		        android:layout_gravity="left"
		        android:padding="3dp"
		        android:layout_marginBottom="10dp" />
		    
		    <EditText
		        android:id="@+id/usernameEditText"
		        android:layout_column="1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:width="200dp"
				android:singleLine="true"
				android:textColor="@color/white"
				android:layout_gravity="right"
				android:lines="1"
				android:textSize="18sp" />
	    </TableRow>

		<TableRow>
		    <TextView
		        android:id="@+id/pwdTextView"
		        android:layout_column="0"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/password"
		        android:textColor="@color/white"
		        android:fontFamily="@string/textStyle"
		        android:layout_gravity="left"
		        android:textSize="20sp"
		        android:padding="3dp"
		        android:layout_marginBottom="10dp" />
		    
		    <EditText
		        android:id="@+id/pwdEditText"
		        android:layout_column="1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:width="200dp"
				android:textColor="@color/white"
				android:singleLine="true"
				android:layout_gravity="right"
				android:lines="1"
				android:textSize="18sp" />	 		    
		</TableRow>   
		
		<TableRow>
			<Button
			    android:id="@+id/loginButton"
			    android:layout_column="1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/loginButton"
			    android:fontFamily="@string/textStyle"
			    android:textColor="@color/white"
			    android:textSize="20sp"
			    android:background="#44FFEE00"
			    android:layout_marginTop="20dp"
			    android:layout_marginLeft="0dp"/>
		</TableRow>
		<TableRow>
			<TextView
			    android:id="@+id/errorTextView"
			    android:layout_span="2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/orange"
			    android:layout_gravity="left"
			    android:textSize="12sp"
			    android:padding="3dp"
			    android:layout_marginBottom="0dp" />
		</TableRow>
	</TableLayout>
</LinearLayout>
