<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    
	<LinearLayout 
	    android:id="@+id/homePageLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    
	    <TextView 
            android:id="@+id/homePageUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp" />
        
	    <Button
	        android:id="@+id/homeExitButton"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/homePageExistButton"
            android:layout_marginBottom="25dp" />
	    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:background="@color/lightPurple"
            android:layout_marginBottom="10dp"
            android:text="@string/homePageCustomTextView" />
        
        <ListView
            android:id="@+id/homePageCustomList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />
        
       <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:background="@color/lightPurple"
            android:text="@string/homePageDefaultTextView" />
        
        <android.application.cc98.view.GrapeGridView
            android:name="android.application.cc98.view.GrapeGridView"
        	class="android.application.cc98.view.GrapeGridView"
        	android:id="@+id/homePageDefaultGrid"
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:numColumns="5"
            />      
      <!--        android:horizontalSpacing="5dp"   -->
  <!--   </ScrollView> -->

        
	</LinearLayout>
</ScrollView>